feat: Добавлены DTO и мапперы для работы с фильмами, обновлены методы сервиса и контроллера